<resources>
    <string name="app_name">MemoryQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="memory_quiz">Memory Quiz</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="play">PLAY</string>
    <string name="info">Info</string>
    <string name="stock_image">stock image</string>
    <string name="draw_rectangles_around_faces">Draw Rectangles around Faces</string>
    <string name="two_circle">②</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
