<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ajithk14.memoryquiz.StartScreen">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/myLayout"
        android:background="@drawable/my_bg_anim"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="315dp"
            android:layout_height="81dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="MemoryQuiz"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752"
            tools:layout_conversion_absoluteHeight="160dp"
            tools:layout_conversion_absoluteWidth="768dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="301dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698">

            <Button
                android:id="@+id/button"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/add"
                android:textSize="30sp" />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_dark"
                android:onClick="onClickEdit"
                android:padding="8dp"
                android:text="@string/edit"
                android:textSize="30sp" />

            <Button
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="onClickPlay"
                android:padding="8dp"
                android:text="@string/play"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_purple"
                android:onClick="onClickStats"
                android:padding="8dp"
                android:text="@string/info"
                android:textSize="30sp"
                android:visibility="visible" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="71dp"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.914"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>